added changes in general config screen and web service response json

--- a/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
@@ -9,4 +9,10 @@ lbl.general.config.value=Config Value
 lbl.general.config.value.placeholder = Enter Config Value
 lbl.general.config.message=Config Message
 lbl.general.config.message.placeholder = Enter Config Message
-lbl.save.or.update.button = Save or Update
+lbl.update.button = Update
+
+##
+#Set contest related labels
+##
+lbl.contest.open = Is Contest open ?
+lbl.opt.service.start = Is Otp service start ?
