Added changes for manage child portlet

--- a/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
@@ -16,3 +16,22 @@ lbl.update.button = Update
 ##
 lbl.contest.open = Is Contest open ?
 lbl.opt.service.start = Is Otp service start ?
+
+##
+#Manage child portlet lables
+##
+lbl.child.manage.title = Child Management
+lbl.contact.number = Contact Number
+lbl.contact.number.placeholder = Enter Contact Number
+lbl.child.id = Child Id
+lbl.child.id.placeholder = Enter Child Id
+
+lbl.add.new.child.title = Add New Child
+lbl.child.first.name = First Name
+lbl.child.middle.name = Middle Name
+lbl.child.last.name = Last Name
+lbl.child.contact.number = Contact No
+lbl.child.date.of.birth = Date of birth
+
+btn.add.new.child = Add New Child
+btn.search = Search
