Added changes for add new child screen

--- a/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
@@ -35,3 +35,5 @@ lbl.child.date.of.birth = Date of birth
 
 btn.add.new.child = Add New Child
 btn.search = Search
+
+lbl.is.child.active = Is Child Active ?
