added changes for manage child info portlet

--- a/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
@@ -37,3 +37,7 @@ btn.add.new.child = Add New Child
 btn.search = Search
 
 lbl.is.child.active = Is Child Active ?
+
+lbl.back.btn = Back
+lbl.save.btn = Save
+lbl.update.btn = Update
