--- a/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
@@ -33,6 +33,9 @@ lbl.child.last.name = Last Name
 lbl.child.contact.number = Contact No
 lbl.child.date.of.birth = Date of birth
 
+lbl.photo.orientation.landscape = Landscape
+lbl.photo.orientation.portrait = Portrait
+
 btn.add.new.child = Add New Child
 btn.search = Search
 
@@ -41,3 +44,4 @@ lbl.is.child.active = Is Child Active ?
 lbl.back.btn = Back
 lbl.save.btn = Save
 lbl.update.btn = Update
+lbl.import.bulk.child.data = Import Bulk Child Data
