Added changes for advertisement portlet

--- a/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
@@ -21,6 +21,8 @@ lbl.opt.service.start = Is Otp service start ?
 #Manage child portlet lables
 ##
 lbl.child.manage.title = Child Management
+lbl.advertisement.title = Advertisement
+
 lbl.contact.number = Contact Number
 lbl.contact.number.placeholder = Enter Contact Number
 lbl.child.id = Child Id
@@ -36,12 +38,28 @@ lbl.child.date.of.birth = Date of birth
 lbl.photo.orientation.landscape = Landscape
 lbl.photo.orientation.portrait = Portrait
 
+
 btn.add.new.child = Add New Child
 btn.search = Search
 
+
+lbl.is.advertisement.active = Is Advertisement Active ?
 lbl.is.child.active = Is Child Active ?
 
 lbl.back.btn = Back
 lbl.save.btn = Save
 lbl.update.btn = Update
 lbl.import.bulk.child.data = Import Bulk Child Data
+
+lbl.add.new.advertisement.title = Advertisement Name
+
+
+##
+#Advertisement lables
+##
+lbl.advertise.id = Advertisement Id
+lbl.advertise.name = Advertisement Name
+lbl.advertise.name.placeholder = Enter Advertisement Name
+lbl.advertise.id.placeholder = Enter advertisement id 
+lbl.advertise.status = Advertisement Status
+btn.add.new.advertisement = Add new advertisement
