--- a/Photo-exhibition-workspace/modules/photo-exhibition-service/src/main/resources/database-config.properties
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-service/src/main/resources/database-config.properties
@@ -11,5 +11,5 @@ jdbc.pass=root
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # hibernate.X
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.hbm2ddl.auto=update
