Added changes for general configuration screen

--- a/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
@@ -8,15 +8,23 @@ lbl.general.config.key.placeholder=Enter Config Key
 lbl.general.config.value=Config Value
 lbl.general.config.value.placeholder = Enter Config Value
 lbl.general.config.message=Config Message
+lbl.general.config.location.distance=Distance from contest location
 lbl.general.config.message.placeholder = Enter Config Message
 lbl.update.button = Update
+lbl.location.latitude=Latitude
+lbl.location.longitude=Longitude
 
 ##
 #Set contest related labels
 ##
 lbl.contest.open = Is Contest open ?
 lbl.opt.service.start = Is Otp service start ?
-
+lbl.location.tracking.on = Is Location Tracking On ?
+lbl.location.distance = Valid Distance from Contest Location ?
+lbl.like.service.on = Is Like service on ?
+lbl.location.lat.long = Contest location 
+lbl.minimum.like.required = Minimum likes required :
+lbl.minimum.like.required.placeholder = Enter minimum like required by viewer
 ##
 #Manage child portlet lables
 ##
