added changes for child like count and on board general configuration

--- a/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
@@ -71,3 +71,8 @@ lbl.advertise.name.placeholder = Enter Advertisement Name
 lbl.advertise.id.placeholder = Enter advertisement id 
 lbl.advertise.status = Advertisement Status
 btn.add.new.advertisement = Add new advertisement
+
+##
+#Winner child
+##
+lbl.top.child = Select top child
