added changes for out of ragne message field in location range

--- a/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
@@ -9,6 +9,7 @@ lbl.general.config.value=Config Value
 lbl.general.config.value.placeholder = Enter Config Value
 lbl.general.config.message=Config Message
 lbl.general.config.location.distance=Distance from contest location
+lbl.general.config.location.distance.out.of.range=Message for out of range
 lbl.general.config.message.placeholder = Enter Config Message
 lbl.update.button = Update
 lbl.location.latitude=Latitude
