added change to correct portlet name

--- a/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/content/Language.properties
@@ -77,3 +77,10 @@ btn.add.new.advertisement = Add new advertisement
 #Winner child
 ##
 lbl.top.child = Select top child
+
+
+##
+#Viewer info
+##
+lbl.viewer.id = Viewer Id
+lbl.viewer.id.placeholder = Enter viewer Id
